--- a/test.ipynb
+++ b/test.ipynb
@@ -30,8 +30,8 @@
     "# Exemple d'utilisation\n",
     "n_rows = 1000000\n",
     "n_cols = 5\n",
-    "X = random_table(n_rows, n_cols, low=10, high=50, seed=42)\n",
-    "y = random_table(n_rows, 1, low=10, high=50, seed=42)"
+    "X = random_table(n_rows, n_cols, low=0, high=500, seed=42)\n",
+    "y = random_table(n_rows, 1, low=0, high=500, seed=42)"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "\n",
     "model = LinearRegression()\n",
     "\n",
-    "result_dict = cross_validation(X, y, k=5, model=model, metric=mean_squared_error)"
+    "scores, mean_score = cross_validation(X, y, k=5, model=model, metric=mean_squared_error)"
    ]
   },
   {
@@ -57,11 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'Fold_0': np.float64(132.9512194133805)},\n",
-       " {'Fold_1': np.float64(133.18347207007452)},\n",
-       " {'Fold_2': np.float64(133.3645570314307)},\n",
-       " {'Fold_3': np.float64(133.3931787673376)},\n",
-       " {'Fold_4': np.float64(133.3880841724014)}]"
+       "np.float64(20821.265982957022)"
       ]
      },
      "execution_count": 3,
@@ -70,7 +66,31 @@
     }
    ],
    "source": [
-    "result_dict"
+    "mean_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Fold_0': np.float64(20773.62803334071)},\n",
+       " {'Fold_1': np.float64(20809.917510949137)},\n",
+       " {'Fold_2': np.float64(20838.212036161043)},\n",
+       " {'Fold_3': np.float64(20842.684182396493)},\n",
+       " {'Fold_4': np.float64(20841.88815193772)}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
    ]
   },
   {
