Ajout des commentaires

--- a/test.ipynb
+++ b/test.ipynb
@@ -306,7 +306,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing Values Count</th>\n",
+       "      <th>Missing Values Percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>maxO3</th>\n",
+       "      <td>73</td>\n",
+       "      <td>4.986339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ne6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.136612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ne9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.136612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ne12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.136612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ne15</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.136612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ne18</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.341530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vdir6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vvit6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vdir9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vvit9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vdir12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vvit12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vdir15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vvit15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vdir18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vvit18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vx</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>maxO3v</th>\n",
+       "      <td>73</td>\n",
+       "      <td>4.986339</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Missing Values Count  Missing Values Percentage\n",
+       "maxO3                     73                   4.986339\n",
+       "T6                         1                   0.068306\n",
+       "T9                         1                   0.068306\n",
+       "T12                        1                   0.068306\n",
+       "T15                        1                   0.068306\n",
+       "T18                        1                   0.068306\n",
+       "Ne6                        2                   0.136612\n",
+       "Ne9                        2                   0.136612\n",
+       "Ne12                       2                   0.136612\n",
+       "Ne15                       2                   0.136612\n",
+       "Ne18                       5                   0.341530\n",
+       "Vdir6                      1                   0.068306\n",
+       "Vvit6                      1                   0.068306\n",
+       "Vdir9                      1                   0.068306\n",
+       "Vvit9                      1                   0.068306\n",
+       "Vdir12                     1                   0.068306\n",
+       "Vvit12                     1                   0.068306\n",
+       "Vdir15                     1                   0.068306\n",
+       "Vvit15                     1                   0.068306\n",
+       "Vdir18                     1                   0.068306\n",
+       "Vvit18                     1                   0.068306\n",
+       "Vx                         1                   0.068306\n",
+       "maxO3v                    73                   4.986339"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_count = df.isnull().sum()\n",
+    "missing_percentage = (missing_count / len(df)) * 100\n",
+    "\n",
+    "# Création d'un DataFrame de résumé des valeurs manquantes\n",
+    "missing_summary = pd.DataFrame({\n",
+    "    'Missing Values Count': missing_count,\n",
+    "    'Missing Values Percentage': missing_percentage\n",
+    "})\n",
+    "\n",
+    "# Filtrer les colonnes ayant des valeurs manquantes\n",
+    "missing_summary = missing_summary[missing_summary['Missing Values Count'] > 0]\n",
+    "missing_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -319,6 +516,8 @@
     }
    ],
    "source": [
+    "# Définition des variables \n",
+    "\n",
     "df.dropna(inplace=True)\n",
     "\n",
     "X = df.drop('maxO3v', axis=1).to_numpy()\n",
@@ -330,14 +529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse sur les K floads :289.0901210994387\n"
+      "mse sur les K floads :288.05367038032875\n"
      ]
     }
    ],
@@ -352,25 +551,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Fold_0': np.float64(288.3022455860066)},\n",
-       " {'Fold_1': np.float64(278.7824844191261)},\n",
-       " {'Fold_2': np.float64(258.6394620247371)},\n",
-       " {'Fold_3': np.float64(355.8763335329645)},\n",
-       " {'Fold_4': np.float64(221.77402312467197)},\n",
-       " {'Fold_5': np.float64(334.0828298521211)},\n",
-       " {'Fold_6': np.float64(233.65782515073138)},\n",
-       " {'Fold_7': np.float64(349.34138576752775)},\n",
-       " {'Fold_8': np.float64(298.5899296552559)},\n",
-       " {'Fold_9': np.float64(271.85469188124443)}]"
+       "[{'Fold_0': np.float64(367.4373836147325)},\n",
+       " {'Fold_1': np.float64(255.1798639683031)},\n",
+       " {'Fold_2': np.float64(323.59605192225075)},\n",
+       " {'Fold_3': np.float64(288.62199906364697)},\n",
+       " {'Fold_4': np.float64(268.8356042711468)},\n",
+       " {'Fold_5': np.float64(229.96053609621035)},\n",
+       " {'Fold_6': np.float64(295.8408100215843)},\n",
+       " {'Fold_7': np.float64(192.05087657795053)},\n",
+       " {'Fold_8': np.float64(400.17056233162526)},\n",
+       " {'Fold_9': np.float64(258.8430159358378)}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,19 +580,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "285.0248458226009\n"
+      "308.937274081718\n"
      ]
     }
    ],
    "source": [
-    "# Comparaison avec seulement un flold\n",
+    "# Comparaison sans valiadation croisée\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
@@ -405,16 +604,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([0.00539994, 0.00144386, 0.01010013, 0.00366902, 0.00201964,\n",
-       "        0.00349498, 0.00364065, 0.00228405, 0.00114107, 0.00151801]),\n",
-       " 'score_time': array([0.01744199, 0.00227404, 0.00800586, 0.00103188, 0.00163198,\n",
-       "        0.00194693, 0.00127912, 0.00076294, 0.00373006, 0.00213504]),\n",
+       "{'fit_time': array([0.00176406, 0.00108123, 0.00163579, 0.00184584, 0.00165796,\n",
+       "        0.00192189, 0.00143886, 0.00196004, 0.00179672, 0.002069  ]),\n",
+       " 'score_time': array([0.00099897, 0.00173903, 0.00226927, 0.00106907, 0.00139594,\n",
+       "        0.00175881, 0.00195408, 0.00109291, 0.00093412, 0.00097609]),\n",
        " 'test_neg_mean_squared_error': array([-322.24511732, -259.94550913, -289.66320176, -304.48607566,\n",
        "        -327.22287318, -327.46287702, -159.42877606, -292.76520117,\n",
        "        -342.90824918, -263.01824618]),\n",
@@ -423,7 +622,7 @@
        "        -14.2509683 , -12.38365425])}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
